--- a/src/test/java/mainAssignment/Reports/Test_Report.html
+++ b/src/test/java/mainAssignment/Reports/Test_Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 4, 2022 01:06:58 PM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 4, 2022 01:35:51 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Login Test</p>
+            <p class="name">Add Task Test</p>
             <p class="text-sm">
-              <span>1:06:58 PM</span> / <span>00:00:00:000</span>
+              <span>1:35:51 PM</span> / <span>00:00:02:983</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,16 +89,44 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Login Test</h5>
-<span class='badge badge-success'>04.04.2022 1:06:58 PM</span>
-<span class='badge badge-danger'>04.04.2022 1:06:58 PM</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<h5 class="test-status text-pass">Add Task Test</h5>
+<span class='badge badge-success'>04.04.2022 1:35:51 PM</span>
+<span class='badge badge-danger'>04.04.2022 1:35:54 PM</span>
+<span class='badge badge-default'>00:00:02:983</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
-</div>          </div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:35:52 PM</td>
+        <td>
+          Add task test setup
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:35:54 PM</td>
+        <td>
+          Content Type Validation successful
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:35:54 PM</td>
+        <td>
+          Status Code Validation successful
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
         </li>
         <li class="test-item"  status="pass" test-id="2"
           author=""
@@ -107,7 +135,7 @@
           <div class="test-detail">
             <p class="name">Base Test</p>
             <p class="text-sm">
-              <span>1:06:59 PM</span> / <span>00:00:00:755</span>
+              <span>1:35:51 PM</span> / <span>00:00:00:543</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -116,9 +144,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Base Test</h5>
-<span class='badge badge-success'>04.04.2022 1:06:59 PM</span>
-<span class='badge badge-danger'>04.04.2022 1:06:59 PM</span>
-<span class='badge badge-default'>00:00:00:755</span>
+<span class='badge badge-success'>04.04.2022 1:35:51 PM</span>
+<span class='badge badge-danger'>04.04.2022 1:35:52 PM</span>
+<span class='badge badge-default'>00:00:00:543</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -130,35 +158,35 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:06:59 PM</td>
+        <td>1:35:51 PM</td>
         <td>
           Test setup
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:06:59 PM</td>
+        <td>1:35:52 PM</td>
         <td>
           successfully read user list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:06:59 PM</td>
+        <td>1:35:52 PM</td>
         <td>
           successfully read task list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:06:59 PM</td>
+        <td>1:35:52 PM</td>
         <td>
           successfully read new tasks list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:06:59 PM</td>
+        <td>1:35:52 PM</td>
         <td>
           Test loggg
         </td>
@@ -182,13 +210,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 4, 2022 01:06:58 PM</h3>
+<h3>Apr 4, 2022 01:35:51 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 4, 2022 01:06:59 PM</h3>
+<h3>Apr 4, 2022 01:35:54 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -239,7 +267,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>5</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>8</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -258,7 +286,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login Test":0,"Base Test":0.755
+"Add Task Test":2.983,"Base Test":0.543
 };
 </script>
 <div class="row">
@@ -302,7 +330,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 5,
+passEvents: 8,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
