--- a/src/test/java/mainAssignment/Reports/Test_Report.html
+++ b/src/test/java/mainAssignment/Reports/Test_Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 4, 2022 01:35:51 PM</span></a>
+<a href="#"><span class="badge badge-primary">Apr 4, 2022 02:13:57 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Add Task Test</p>
             <p class="text-sm">
-              <span>1:35:51 PM</span> / <span>00:00:02:983</span>
+              <span>2:13:57 PM</span> / <span>00:00:04:303</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Add Task Test</h5>
-<span class='badge badge-success'>04.04.2022 1:35:51 PM</span>
-<span class='badge badge-danger'>04.04.2022 1:35:54 PM</span>
-<span class='badge badge-default'>00:00:02:983</span>
+<span class='badge badge-success'>04.04.2022 2:13:57 PM</span>
+<span class='badge badge-danger'>04.04.2022 2:14:02 PM</span>
+<span class='badge badge-default'>00:00:04:303</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,21 +104,35 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:52 PM</td>
+        <td>2:13:58 PM</td>
         <td>
           Add task test setup
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:54 PM</td>
+        <td>2:14:01 PM</td>
+        <td>
+          Add task Test successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>2:14:01 PM</td>
         <td>
           Content Type Validation successful
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:54 PM</td>
+        <td>2:14:02 PM</td>
+        <td>
+          Response Validation successful
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>2:14:02 PM</td>
         <td>
           Status Code Validation successful
         </td>
@@ -135,7 +149,7 @@
           <div class="test-detail">
             <p class="name">Base Test</p>
             <p class="text-sm">
-              <span>1:35:51 PM</span> / <span>00:00:00:543</span>
+              <span>2:13:57 PM</span> / <span>00:00:00:469</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -144,9 +158,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Base Test</h5>
-<span class='badge badge-success'>04.04.2022 1:35:51 PM</span>
-<span class='badge badge-danger'>04.04.2022 1:35:52 PM</span>
-<span class='badge badge-default'>00:00:00:543</span>
+<span class='badge badge-success'>04.04.2022 2:13:57 PM</span>
+<span class='badge badge-danger'>04.04.2022 2:13:58 PM</span>
+<span class='badge badge-default'>00:00:00:469</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -158,35 +172,35 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:51 PM</td>
+        <td>2:13:57 PM</td>
         <td>
           Test setup
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:52 PM</td>
+        <td>2:13:58 PM</td>
         <td>
           successfully read user list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:52 PM</td>
+        <td>2:13:58 PM</td>
         <td>
           successfully read task list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:52 PM</td>
+        <td>2:13:58 PM</td>
         <td>
           successfully read new tasks list
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:35:52 PM</td>
+        <td>2:13:58 PM</td>
         <td>
           Test loggg
         </td>
@@ -210,13 +224,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 4, 2022 01:35:51 PM</h3>
+<h3>Apr 4, 2022 02:13:57 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 4, 2022 01:35:54 PM</h3>
+<h3>Apr 4, 2022 02:14:02 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -267,7 +281,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>8</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>10</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -286,7 +300,7 @@
 </div></div>
 <script>
 var timeline = {
-"Add Task Test":2.983,"Base Test":0.543
+"Add Task Test":4.303,"Base Test":0.469
 };
 </script>
 <div class="row">
@@ -330,7 +344,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 8,
+passEvents: 10,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
